tests/test_date/bad/rounding_option.catala_fr
```catala
déclaration champ d'application Test:
  contexte bday contenu date
  contexte today contenu date
  contexte ambiguité contenu booléen

champ d'application Test:
  définition bday égal à |2000-02-29|
  définition today égal à |2018-03-01|
  définition ambiguité égal à bday + 18 an <= today 
```

```catala-test-inline
$ catala Interpret -s Test
[WARNING] In scope "Test", the variable "ambiguité" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_date/bad/rounding_option.catala_fr:5.11-20:
└─┐
5 │   contexte ambiguité contenu booléen
  │            ‾‾‾‾‾‾‾‾‾

catala: internal error, uncaught exception:
        Dates_calc.Dates.AmbiguousComputation
        
#return code 125#
```
